# python_btc_09

./: .pre-commit-config.yaml  README.md  etl.py  exemplo_01.py  pipeline.py  pyproject.toml  requirements.txt
decorator/: log.py
