[tool.poetry]
name = "python-btc-09"
version = "0.1.0"
description = ""
authors = ["jeantorre <jean.torre21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pandas = "^2.2.2"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
